2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Don't allocate extra memory for the stream buffer.

2008-08-07  Jonathan Pryor  <jpryor@novell.com>

	* Stream.cs: Added; .AsEnumerable() extension method for System.IO.Stream.

2008-08-05  Jonathan Pryor  <jpryor@novell.com>

	* Tuple.cs: Rename TupleExtensions to TupleRocks, for consistency with other
	  extension method-containing types.

2008-08-04  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
	  - (delete) .RemoveFirstOccurrence<A>(IEnumerable<A>,A)
	  -          .RemoveFirstOccurrences<A>(IEnumerable<A>,A,int)

2008-08-04  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
	  - (insert)    .Insert<A>(IEnumerable<A>,A)
	  - (insertBy)  .Insert<A>(IEnumerable<A>,A,Func<A,A,int>)

2008-08-04  Jonathan Pryor  <jpryor@novell.com>

	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
	  - (zip)    .Zip<A,B>(IEnumerable<A>,IEnumerable<B>)
	  - (zip3)   .Zip<A,B,C>(IEnumerable<A>,IEnumerable<B>,IEnumerable<C>)
	  - (zip4)   .Zip<A,B,C,D>(IEnumerable<A>,IEnumerable<B>,IEnumerable<C>,IEnumerable<D>)
	  - (unzip)  .Unzip<A,B>(IEnumerable<Tuple<A,B>>)
	  - (unzip3) .Unzip<A,B,C>(IEnumerable<Tuple<A,B,C>>)
	  - (unzip4) .Unzip<A,B,C,D>(IEnumerable<Tuple<A,B,C,D>>)

2008-08-03  Jonathan Pryor  <jpryor@novell.com>

	* Check.cs: Add Check.Values() method.
	* IEnumerable.cs: Add Haskell-inspired (and related) methods:
	  - (elemIndex)   .IndexOf<S>(IEnumerable<S>, S)
	  -               .IndexOfAny<S>(IEnumerable<S>, params S[])
	  -               .IndexOfAny<S>(IEnumerable<S>, IEnumerable<S>)
	  - (elemIndices) .IndicesOf<S>(IEnumerable<S>, S)
	  -               .IndicesOfAny<S>(IEnumerable<S>, params S[])
	  -               .IndicesOfAny<S>(IEnumerable<S>, IEnumerable<S>)
	  - (findIndex)   .FindIndex<S>(IEnumerable<S>, Func<S,bool>)
	  - (findIndices) .FindIndices<S>(IEnumerable<S>, Func<S,bool>)
