@@ -1,5 +1,10 @@
 2008-08-07  Jonathan Pryor  <jpryor@novell.com>
 
+	* StreamTests.cs: Add test for new functionality.  (Disabled, due to
+	  bnc#415644).
+
+2008-08-07  Jonathan Pryor  <jpryor@novell.com>
+
 	* StreamTests.cs: Added; unit tests for Mono.Rocks.StreamRocks.AsEnumerable.
 
 2008-08-04  Jonathan Pryor  <jpryor@novell.com>
